Fixed some problems with the CSS, and fixed the javascript so it reflected the correct number of cells in the item table

--- a/galahad_styles.css
+++ b/galahad_styles.css
@@ -259,9 +259,22 @@ wbresourcelist { } */
 
 /* SMS Feature */
 
+#smsfeatures {
+    margin:.5em;
+}
+
 #info, #sms {
-border:1px solid #36647b; position:absolute; top:250; left:50;
-z-index:1000; background:#fff; padding:10px; margin:10px; background:#efefcf; }
+    border:1px solid #36647b;
+    position:absolute;
+    top:250;
+    left:50;
+    z-index:1000;
+    background:#fff;
+    padding:10px;
+    margin:10px;
+    background:#efefcf;
+    white-space:normal;
+}
 #sms .eg {font-style:italic; font-size:80%; }
 #info {top:500}
 #sms {font-size:70%}
