Set up the right results thing for Galahad

--- a/styles.css
+++ b/styles.css
@@ -440,6 +440,8 @@ table.browseResourceTable { border:0; }
 
 .browseSuperEntry  { background:#FFFFFF url('tile_browsesuperentry.jpg') repeat-x bottom left; border-bottom:1px solid #D3D3D3; margin:0; text-align:center; }
 
+.browseSuperEntry  td {font-weight:bold;}
+
 h1.browseSuperEntryTitle { font-size:1.1em; display:inline; }
 
 .button { white-space:nowrap;  }
@@ -967,6 +969,8 @@ margin:0 0 0 3px;
 padding:0;
 text-decoration:none;
 }
+
+.rrUserQuery {color:#457029;}
 
 .rssArea div, .rssArea span { padding:0; }
 
