Changed the color of the link banner

--- a/styles.css
+++ b/styles.css
@@ -671,7 +671,7 @@ div .bibResourceSidebar { display:none; }
 .libinfoRight li {  }
 
 .linkBanner {
-    background:#3B77B6;
+    background:#0087B1;
     margin:0;
     position:relative;
     text-align:right;
