--- a/styles.css
+++ b/styles.css
@@ -1019,6 +1019,10 @@ div.rssChannelEntries { border:none; background:#FFFFFF; }
 
 #specializedSearch { vertical-align:bottom; margin-bottom:3px; }
 
+#standardNumbers li { margin-top:1em; }
+
+#standardNumbers ul li { margin-top:0; }
+
 .submitHidden { position:absolute; left:-999px; top:-999px; }
 
 /* Staff view */
