Put the CARDinals Catalog logo back

--- a/styles_s1.css
+++ b/styles_s1.css
@@ -1,4 +1,12 @@
 .linkBanner {
-    background-color:#CC0000
+    background-color:#CC0000;
 }
+
+.macLogo {
+    width:169px;
+    position:absolute;
+    top:10px;
+    left:38.5%;
+}
+
 
