--- a/styles_s1.css
+++ b/styles_s1.css
@@ -1,3 +1,9 @@
+.bibDisplayJacket  { width:150px; text-align:center; margin:0; }
+
+.bibMedia { margin-top: 0; }
+
+#googlebooks { display: block; }
+
 .linkBanner {
     background-color:#CC0000;
 }
