--- a/styles_s3.css
+++ b/styles_s3.css
@@ -1,11 +1,74 @@
-.topLogoImage {
-    padding:43px 0;
+.clusterLogo {
+    top:17px;
+    right:0;
 }
 
-.clusterLogo {
-    top:10px;
+.linkBanner {
+    height:24px;
+    background:#7F7F7F url('/screens/light_grey_gradient.png') repeat-x;
+}
+
+.linkBanner ul:first-child {
+    padding:0;
+}
+
+.linkBanner .navLeft, .linkBanner .navRight {
+    padding-top:.15em;
+}
+
+.linkBanner, .navTop {
+    font-family:Arial,'DejaVu Sans','Liberation Sans',Freesans,sans-serif;
+}
+
+.navRight {
+    float:right;
 }
 
 .navRight div {
     display:inline;
+}
+
+.navTop, .linkBanner {
+    font-family: 
+}
+
+.navTop {
+    float:left;
+    width:100%;
+    height:35px;
+    background:#0B0B0B url('/screens/black_gradient.png') repeat-x;
+    color:white;
+}
+
+.navTop a {
+    color:white;
+    text-decoration:none;
+}
+
+.navTop ul {
+    margin:0;
+    list-style-type:none;
+    padding: .5em 0;
+}
+
+.navTop ul li {
+    display:inline;
+    margin-right:0;
+    margin-left:2em;
+}
+
+.topLogo {
+    clear:both;
+    background:#AC0B00 url('/screens/red_gradient.png') repeat-x;
+    float:left;
+    width:100%;
+}
+
+.topLogoImage {
+    padding:30px;
+}
+
+.topLogoImage, .clusterLogo, .navRight, .navLeft {
+    padding-left:30px;
+    padding-right:30px;
 }
