--- a/styles.css
+++ b/styles.css
@@ -733,7 +733,6 @@ div .bibResourceSidebar { display:none; }
 
 .mobiusLogo, .clusterLogo { position:absolute; right:10px; top:20px;}
 
-
 .msg td { padding-top:3px; }
 
 .mylistsSavePage { height:100%; width:100%; padding-bottom:0; padding-top:0; }
@@ -1062,7 +1061,7 @@ div.rssChannelEntries { border:none; background:#FFFFFF; }
 
 .topLogo img { border:0; display:block; margin-left:auto; margin-right:auto }
 
-.topLogoImage {float:left; padding:8px 10px;}
+.topLogoImage { padding:8px 10px; }
 
 .topLogoImage, .mobiusLogo {width:250px;}
 
