Hid the text message button on the export screen

--- a/styles.css
+++ b/styles.css
@@ -1217,3 +1217,5 @@ tr.highlight { background:#FFFFE4; }
 #info {top:500}
 
 #sms {font-size:70%}
+
+body > div#bibDisplayBody a#smsbutton { display:none; }
