Enabled Google Books for SEMO

--- a/styles_s3.css
+++ b/styles_s3.css
@@ -1,7 +1,13 @@
+.bibDisplayJacket  { width:145px; text-align:center; margin:0; }
+
+.bibMedia { margin-top: 0; }
+
 .clusterLogo {
     top:17px;
     right:0;
 }
+
+#googlebooks { display: block; }
 
 .linkBanner {
     height:24px;
