--- a/styles.css
+++ b/styles.css
@@ -719,6 +719,17 @@ div .bibResourceSidebar { display:none; }
 
 .loggedInMessage { color:#999999; font-size:.8em; font-style:normal; float:right; margin:1px 5px 0 0; }
 
+.semoMessage {
+    color: #000000;
+    float: left;
+    font-size: 1em;
+    font-style: normal;
+    margin: 1px 5px 0 0;
+}
+.semoMessage {
+    padding-left: 6px;
+}
+
 .loggedInMoreInfo { display:none; position:absolute; top:-5000px; right:-5000px; }
 
 .login h1 { border-bottom:1px dotted #D3D3D3; margin:0 5em 0 0; }
