update logo and hex color

--- a/styles_s3.css
+++ b/styles_s3.css
@@ -65,7 +65,7 @@
 
 .topLogo {
     clear:both;
-    background:#AC0B00 url('/screens/red_gradient.png') repeat-x;
+    background:#c8102e repeat-x;
     float:left;
     width:100%;
 }
