--- a/styles.css
+++ b/styles.css
@@ -879,7 +879,7 @@ width:19%;
 
 .patFloat .button img { margin-top:3px; }
 
-.patFloat .buttonText { margin-left:3px; }
+.patFloat .buttonText { margin-left:3px; font-size:.8824em;}
 
 .patFuncArea { background:#FFFFFF; float:left; margin-left:20px; width:60%; margin-bottom:18px; }
 
